recursion.cons.length.Length.scala.error
Erreur de compilation :
Length:3: error: not found: value nil
  if (l == nil)0;
           ^