recursion.cons.length.Length.scala.code
def length(l:List[Int]): Int = {
  if (l == nil)0;
  else 1+length(l.tail);
}
